--- a/style.css
+++ b/style.css
@@ -1,136 +1,90 @@
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "rejouice headline";
 
 }
 html,body{
     width: 100%;
     height: 100%;
 }
-section{
+
+#page1{
+    height: 100vh;
+    width: 100%;
+    background-color: #dadada;
+    position: relative;
+}
+#cursor{
+    height:7.5vw;
+    width:7.5vw;
+    background-color: #FF5F3F;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-50%, -50%);
+
+
+
+}
+#cursor h5{
+    font-size: 1.2vw;
+    font-weight: 500;
+}
+#page1 video{
     height: 100%;
     width: 100%;
-    /* background-color: bisque; */
+    object-fit: cover;
+    position: absolute;
+}
+#page1-content {
+    height: 100%;
+    width: 100%;
+    /* background-color: rgb(0, 0, 0); */
+    position: relative;
+    z-index: 10;
+    color: #fff;
+    display: flex;
+    /* background-color: red; */
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+
+    /* padding-bottom: 5vw; */
+
 }
 nav{
+    /* height: 100px; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
-    padding: 60px 100px;
-}
-.page2{
-    display: flex;
-    align-items: center;
-    gap: 70px;
-
-}
-
-nav h1{
-    font-size: 50px;
-    
-}
-nav .page2 h4{
-    font-size: 30px;
-    font-weight: 500;
-
-}
-nav .page2 button {
-    padding: 22px 40px;
-    font-size: 22px;
-    background-color: transparent;
-    border-radius: 10px;
-    border: 1px solid black;
-}
-nav h1 i{
-   display: inline-block;
-   rotate: 45deg;  
-}
-.center{
-    padding: 70px 100px;
-/* background-color: red; */
-height: 85%;
-width: 100%;
-display: flex;
-}
-.center-part1{
-    /* background-color: lightblue; */
-    height: 100%;
-    width: 42%;
-}
-
-.center-part1 h1{
-    font-size:110px ;
-    line-height: 1.2;
-    font-family: monospace;
-    /* background-color: red; */
-}
-.center-part1 p{
-    font-size: 30px;
-    width: 95%;
-    margin-top: 50px;
-    margin-bottom: 35px;
-
-}
-.center-part1 button{
-    color: white;
-    background-color: black;
-    border-radius: 15px;
-    padding: 28px 40px;
-    font-size: 25px;
-    font-weight: 500;
-    border: none;
-}
-
-
-.center-part2{
-    /* background-color: lightblue; */
-    height: 100%;
-    width: 56%;
-    position: relative;
-}
-.center-part2 img{
-    height: 100%;
-    position: absolute;
-    right: 0;   
-}
-.section1bottom{
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 120px;
-}
-.section1bottom img{
-    height: 60px;
-}
-.section2 .services {
-  /* background-color: red; */
-  padding: 40px 120px;
-  align-items: flex-start;
-  justify-content: center;
-  /* display: flex; */
-  gap: 20px;
-  margin-top: 30px;
-
-}
-.services h3{
-    background-color: #B9FF66;
-   
-   width: 10%;
- 
-   padding: 5px 10px 0 10px;
-   border-radius: 5px;
-   font-size: 60px;
-
-
-}
-.services p{
-    width: 40%;
-    font-size: 20px;
-    font-weight: 500;
-}
-.container {
-    height: 80%;
     width: 100%;
-    padding
+    /* background-color: red; */
+    padding: 3vw 3vw;
+}
+nav h3{
+    font-size: 1.4vw;
+    font-weight: 100;
+}
+nav h4{
+    font-size: 1.4vw;
+    font-weight: 100;
+
+}
+#page1-content h1{
+    font-size: 27vw;
+    font-weight: 100;
+    /* bottom: 5%; */
+    line-height: 27vw;
+}
+#page2{
+    height: 100vh;
+    width: 100%;
+    background-color: beige;
+    
 }
